--- a/_html/index.html
+++ b/_html/index.html
@@ -5,8 +5,8 @@
 
 <body>
     <header> 
-        <img src="imagens/jordan (1).svg" >
-        <img src="imagens/snkrs.svg" >
+        <img class= "img1" src="imagens/jordan (1).svg" >
+        <img class= "img2" src="imagens/snkrs.svg" >
         <div> Ajuda </div>
         <div> Junte-se a nós </div>
         <div> Entrar </div>
