add pag de produtos

--- a/html/index.html
+++ b/html/index.html
@@ -1,19 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="index.css">    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/public/stylesheets/index.css">
 </head>
-
 <body>
     <header> 
-        <img class= "img1" src="imagens/jordan (1).svg" >
-        <img class= "img2" src="imagens/snkrs.svg" >
+        <img class= "img1" src="/public/images/jordan (1).svg" >
+        <img class= "img2" src="/public/images/snkrs.svg" >
         <div> Ajuda </div>
         <div> Junte-se a nós </div>
         <div> Entrar </div>
     </header>
 
     <div>
-        <img src="imagens/logo.svg" >
+        <img src="/public/images/logo.svg" >
         <div> Sessões </div>
         <div> Lançamentos </div>
         <div> Feminino </div>
@@ -23,66 +27,66 @@
     </div>
 
     <div> 
-        <img src="imagens/tout-corinthians-desk.webp"> 
+        <img src="/public/images/tout-corinthians-desk.webp"> 
     </div>
 
     <div>
         <h2> Camisas de Seleções.</h2>
-        <div> <img src="imagens/tout-federacoes-desk-v3.webp"> </div>
+        <div> <img src="/public/images/tout-federacoes-desk-v3.webp"> </div>
     </div>
     
     <div> 
         <h2> Seleção Brasileira </h2>
-        <img src="imagens/tout-selecao-brasileira2-desk-v3.webp">
+        <img src="/public/images/tout-selecao-brasileira2-desk-v3.webp">
     </div>
 
     <div>
         <h1> LOOKBOOK</h1>
-        <img src="imagens/tout-lookbook-desk-v3.jpg">
+        <img src="/public/images/tout-lookbook-desk-v3.jpg">
     </div>
 
     <div>
         <h1> Lançamento </h1>
-        <img src="imagens/tout-mbappe-mercurial-desk.jpg">
+        <img src="/public/images/tout-mbappe-mercurial-desk.jpg">
     </div>
 
     <div>
         <h1> Nike Membership </h1>
-        <img src="imagens/tout-membership-atletas-desk-v2.jpg">
+        <img src="/public/images/tout-membership-atletas-desk-v2.jpg">
     </div>
 
     <div>
         <div> <h3>Conheça também</h3></div>
-        <img src="imagens/CARROSSEL_A.jpg">
-        <img src="imagens/CARROSSEL_B-v2.jpg">
-        <img src="imagens/CARROSSEL_C.jpg">
-        <img src="imagens/CARROSSEL_D.jpg">
+        <img src="/public/images/CARROSSEL_A.jpg">
+        <img src="/public/images/CARROSSEL_B-v2.jpg">
+        <img src="/public/images/CARROSSEL_C.jpg">
+        <img src="/public/images/CARROSSEL_D.jpg">
     </div>
 
     <div>
         <div><h3>NÃO PERCA</h3></div>
         <div>
             <div> 
-                <img src="imagens/022104ID.jpg">
+                <img src="/public/images/022104ID.jpg">
                 <p>Tenis Nike Revolution 6 FlyEasy Next Nature Masculino</p>
                 <p>corrida</p>
                 <p>R$219,90</p>
             </div>
             <div> 
-                <img src="imagens/019385ID.webp">
+                <img src="/public/images/019385ID.webp">
                 <p>Tenis Nike Revolution  FlyEasy Next Nature Masculino</p>
                 <p>Corrida</p>
                 <p>R$229,90</p>
             </div>
         </div>
         <div> 
-            <img src="imagens/013717ID.webp">
+            <img src="/public/images/013717ID.webp">
             <p>Tenis Nike Court royale 2 Feminino</p>
             <p>Casual</p>
             <p>R$229,90</p>
         </div>
         <div> 
-            <img src="imagens/00955615.jpg">
+            <img src="/public/images/00955615.jpg">
             <p>Tenis Nike Legend Essencial 2 Masculino</p>
             <p>Treino & Academia </p>
             <p>R$239,99</p>
@@ -93,61 +97,60 @@
         <div><h3>MAIS VENDIDOS</h3></div>
         <div>
             <div> 
-                <img src="imagens/0228530L.jpg">
+                <img src="/public/images/0228530L.jpg">
                 <p>Camisa Nike Brasil 2022/23 Torcedora Pro Feminino </p>
                 <p>Futebol</p>
                 <p>R$349,99</p>
             </div>
             <div> 
-                <img src="imagens/01113751.jpg">
+                <img src="/public/images/01113751.jpg">
                 <p>Tenis Nike Air Force 1 "7 Masculino</p>
                 <p>Casual</p>
                 <p>R$799,99</p>
             </div>
         </div>
         <div> 
-            <img src="imagens/009573A1.jpg">
+            <img src="/public/images/009573A1.jpg">
             <p>Tenis Nike Legend Essencial 2 Feminino</p>
             <p>Casual</p>
             <p>R$269,90</p>
         </div>
         <div> 
-            <img src="imagens/02192351.jpg">
+            <img src="/public/images/02192351.jpg">
             <p>Camisa Nike Conrinthians I 2022/23 Torcedor Pro Masculino</p>
             <p>Futebol</p>
             <p>R$249,99</p>
         </div>
     </div>
-    
-</body>
-
-<footer>
-    <div>
-        <div> 
-            <p> Encontre uma loja nike</p>
-            <p> Cadastre-se para receber novidades </p>
-            <p> Cartão Presente </p>
-        </div>
-        <div> 
-            <p> Ajuda </p>
-            <p> Dúvidas Gerais </p>
-            <p> Encontre seu Tamanho </p>
-            <p> Eentregas </p>
-            <p> Pedidos </p>
-            <p> Trocas e Devoluções</p>
-            <p> Pagamentos </p>
-            <p> Produtos </p>
-            <p> Coorporativo </p>
-            <p> Fale Conosco </p>
-        </div>
+    <footer>
         <div>
-            <p> Sobre a nike</p>
-            <p> Feito para Jogar</p>
-            <p> Sustentabilidade </p>
+            <div> 
+                <p> Encontre uma loja nike</p>
+                <p> Cadastre-se para receber novidades </p>
+                <p> Cartão Presente </p>
+            </div>
+            <div> 
+                <p> Ajuda </p>
+                <p> Dúvidas Gerais </p>
+                <p> Encontre seu Tamanho </p>
+                <p> Eentregas </p>
+                <p> Pedidos </p>
+                <p> Trocas e Devoluções</p>
+                <p> Pagamentos </p>
+                <p> Produtos </p>
+                <p> Coorporativo </p>
+                <p> Fale Conosco </p>
+            </div>
+            <div>
+                <p> Sobre a nike</p>
+                <p> Feito para Jogar</p>
+                <p> Sustentabilidade </p>
+            </div>
+            <div> 
+                <div> <p> Redes Sociais </p> </div>
+                <div> <p> Formas de Pagamento </p></div>
+            </div>
         </div>
-        <div> 
-            <div> <p> Redes Sociais </p> </div>
-            <div> <p> Formas de Pagamento </p></div>
-        </div>
-    </div>
-</footer>
+    </footer>
+</body>
+</html>
