Adicionado Página de Produtos

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -5,8 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/public/stylesheets/produtos.css">
 </head>
 <body>
-    
+    <div>
+        <div> 
+            <img class= "img01" src="/public/images/produtos/010147ID.webp">
+        </div>
+        <div> 
+            <img class= "img01" src="/public/images/produtos/010147IDA1.webp">
+        </div>
+        <div> 
+            <img class= "img01" src="/public/images/produtos/010147IDA2.webp">
+        </div>
+        <div> 
+            <img class= "img01" src="/public/images/produtos/010147IDA3.webp">
+        </div>
+        <div> 
+            <img class= "img01" src="/public/images/produtos/010147IDA4.webp">
+        </div>
+        <div> 
+            <img class= "img01" src="/public/images/produtos/010147IDA5.webp">
+        </div>
+        <div> 
+            <img class= "img01" src="/public/images/produtos/010147IDA6.webp">
+        </div>
+        <div> 
+            <img class= "img01" src="/public/images/produtos/010147IDA7.webp">
+        </div>
+    </div>
+
+    <div> <h5> Corrida </h5> </div>
+
+    <div> 
+        <h3> Tênis Nike Run Swift 2 Masculino</h3>
+        <h4> R$ 539,99</h4>
+        <h5> ou 12x de R@ 45,00</h5>
+        <h5> 10% off</h5>
+    </div>
+    <div>
+        <img class= "img02" src="/public/images/produtos/0101477V.webp"> 
+        <img class= "img02" src="/public/images/produtos/010147ID.webp">
+        <img class= "img02" src="/public/images/produtos/010147NX.webp">
+        <img class= "img02" src="/public/images/produtos/0101477U.webp"> 
+    </div>
+    <div> <h5> Tamanho </h5> </div>
+    <div>
+        <h5> PROVADOR VIRTUAL </h5>
+        <h5> TABELA DE MEDIDAS</h5>
+    </div>
+
+
+
+
 </body>
 </html>
