--- a/html/index.html
+++ b/html/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <header> 
-        <img class= "img1" src="/public/images/jordan (1).svg" >
-        <img class= "img2" src="/public/images/snkrs.svg" >
+        <div>
+        <img class= "img1" src="/public/images/index/jordan (1).svg" >
+        <img class= "img2" src="/public/images/index/snkrs.svg" >
         <div> Ajuda </div>
         <div> Junte-se a nós </div>
         <div> Entrar </div>
+    </div>
     </header>
 
     <div>
-        <img src="/public/images/logo.svg" >
+        <img class= "img3" src="/public/images/index/logo.svg" >
         <div> Sessões </div>
         <div> Lançamentos </div>
         <div> Feminino </div>
@@ -27,66 +29,66 @@
     </div>
 
     <div> 
-        <img src="/public/images/tout-corinthians-desk.webp"> 
+        <img class= "img4" src="/public/images/index/tout-corinthians-desk.webp"> 
     </div>
 
     <div>
         <h2> Camisas de Seleções.</h2>
-        <div> <img src="/public/images/tout-federacoes-desk-v3.webp"> </div>
+        <div> <img src="/public/images/index/tout-federacoes-desk-v3.webp"> </div>
     </div>
     
     <div> 
         <h2> Seleção Brasileira </h2>
-        <img src="/public/images/tout-selecao-brasileira2-desk-v3.webp">
+        <img src="/public/images/index/tout-selecao-brasileira2-desk-v3.webp">
     </div>
 
     <div>
         <h1> LOOKBOOK</h1>
-        <img src="/public/images/tout-lookbook-desk-v3.jpg">
+        <img src="/public/images/index/tout-lookbook-desk-v3.jpg">
     </div>
 
     <div>
         <h1> Lançamento </h1>
-        <img src="/public/images/tout-mbappe-mercurial-desk.jpg">
+        <img src="/public/images/index/tout-mbappe-mercurial-desk.jpg">
     </div>
 
     <div>
         <h1> Nike Membership </h1>
-        <img src="/public/images/tout-membership-atletas-desk-v2.jpg">
+        <img src="/public/images/index/tout-membership-atletas-desk-v2.jpg">
     </div>
 
     <div>
         <div> <h3>Conheça também</h3></div>
-        <img src="/public/images/CARROSSEL_A.jpg">
-        <img src="/public/images/CARROSSEL_B-v2.jpg">
-        <img src="/public/images/CARROSSEL_C.jpg">
-        <img src="/public/images/CARROSSEL_D.jpg">
+        <img src="/public/images/index/CARROSSEL_A.jpg">
+        <img src="/public/images/index/CARROSSEL_B-v2.jpg">
+        <img src="/public/images/index/CARROSSEL_C.jpg">
+        <img src="/public/images/index/CARROSSEL_D.jpg">
     </div>
 
     <div>
         <div><h3>NÃO PERCA</h3></div>
         <div>
             <div> 
-                <img src="/public/images/022104ID.jpg">
+                <img src="/public/images/index/022104ID.jpg">
                 <p>Tenis Nike Revolution 6 FlyEasy Next Nature Masculino</p>
                 <p>corrida</p>
                 <p>R$219,90</p>
             </div>
             <div> 
-                <img src="/public/images/019385ID.webp">
+                <img src="/public/images/index/019385ID.webp">
                 <p>Tenis Nike Revolution  FlyEasy Next Nature Masculino</p>
                 <p>Corrida</p>
                 <p>R$229,90</p>
             </div>
         </div>
         <div> 
-            <img src="/public/images/013717ID.webp">
+            <img src="/public/images/index/013717ID.webp">
             <p>Tenis Nike Court royale 2 Feminino</p>
             <p>Casual</p>
             <p>R$229,90</p>
         </div>
         <div> 
-            <img src="/public/images/00955615.jpg">
+            <img src="/public/images/index/00955615.jpg">
             <p>Tenis Nike Legend Essencial 2 Masculino</p>
             <p>Treino & Academia </p>
             <p>R$239,99</p>
@@ -97,26 +99,26 @@
         <div><h3>MAIS VENDIDOS</h3></div>
         <div>
             <div> 
-                <img src="/public/images/0228530L.jpg">
+                <img src="/public/images/index/0228530L.jpg">
                 <p>Camisa Nike Brasil 2022/23 Torcedora Pro Feminino </p>
                 <p>Futebol</p>
                 <p>R$349,99</p>
             </div>
             <div> 
-                <img src="/public/images/01113751.jpg">
+                <img src="/public/images/index/01113751.jpg">
                 <p>Tenis Nike Air Force 1 "7 Masculino</p>
                 <p>Casual</p>
                 <p>R$799,99</p>
             </div>
         </div>
         <div> 
-            <img src="/public/images/009573A1.jpg">
+            <img src="/public/images/index/009573A1.jpg">
             <p>Tenis Nike Legend Essencial 2 Feminino</p>
             <p>Casual</p>
             <p>R$269,90</p>
         </div>
         <div> 
-            <img src="/public/images/02192351.jpg">
+            <img src="/public/images/index/02192351.jpg">
             <p>Camisa Nike Conrinthians I 2022/23 Torcedor Pro Masculino</p>
             <p>Futebol</p>
             <p>R$249,99</p>
